[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujopy"
version = "0.0.1"
description = "Pythonic wrappers for MuJoCo models and Graph representations."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Lukas Müller", email = "lukasbmueller@gmail.com" }]
license = { text = "MIT License" }
dependencies = ["mujoco"]
optional-dependencies = { test = ["pytest>=7"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["mujoco", "robotics", "graph"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mujopy*"]
exclude = ["tests*", "tests.*"]
